fix: 회원의 좋아요 목록 조회 반환 DTO 수정